doc/0.105/_sources/reference/post-ad.rst.txt
.. index:: POST /ad
.. _post_ad:

POST |an|/ad
============
.. |an| unicode:: 0x20 .. Workaround for ad blocker: apparently it blocks a section with id 'post-ad'

:ref:`post_ad_v2` | :ref:`post_ad_v1`

.. _post_ad_v2:

POST /ad v2
-----------

.. list-table::
 :widths: 20 80

 * - Scope
   - ``api_rw`` or ``console_rw``

 * - Accept
   - ``application/sellside.ad-v2+json, application/json``

 * - Content-Type
   - ``application/sellside.ad-v2+json; charset=utf-8``

This URL creates a new ad for the current user.

.. warning::

	This call is only compatible with :ref:`categories_v2` and must only
	be used with the other :ref:`categories_v2_compatible_endpoints`. Otherwise,
	the attributes may not be recognized or editable.

If the ad was successfully
created then a **201 Created** is returned and the **Location** header
contains the URL to the newly created ad. The **optional** query parameter
**_body** with value **true** or **false** can be used to influence
whether the response body contains the ad in the body (or not) in case of success.
By default, this value is **true**. If the ad contains errors then the
server returns **400 Bad Request** with a list of errors.

For a new ad the **id** attribute must be omitted or set to zero. The
**title** and **description** must be set and will be trimmed. The
**salutation** contains either **MALE**, **FEMALE**, **COMPANY** or
**FAMILY**. The **sellerName** contains the name of the seller as displayed on
the site.

The **categoryId** must be an existing category id from a category which has
**canPlaceAds** set to **true**. If the **status** of the ad is **ACTIVE** and
the current number of active ads for the same user in this category exceeds
**maxNumberOfActiveAds** as defined in the category then an error is returned.
Ads with **status** equals to **PAUSED** do not have this restriction.

The **currency** must be set to **EUR** and all price amounts must be
specified in euro cents.

The **priceType** must be one of the valid types listed in :doc:`price-types`.
If the **priceType** is either **FIXED_PRICE** or **BIDDING_FROM** then a
**price** in the interval of ``(0,10000000000]`` must be specified. For all
other price types **price** must be omitted.

A new ad must have a **status** which can be either *ACTIVE* or *PAUSED*. An
active ad is shown on the site whereas a paused ad is not. See
:doc:`ad-status` for the list of valid ad status values.

The **cpc** is a mandatory field whose value depends on
the category. The **totalbudget** and **dailyBudget** are optional fields whose value
depend on the category. Omitting them will remove budget limits for this ad.
The category configuration which can be retrieved
through the category URL contains the valid bounds for these fields once filled in.

All prices are specified as numbers, i.e. a price of *10,50 EUR* must be
specified as *1050*. This applies to **price**, **cpc**, **totalBudget** and
**dailyBudget**.

The **postCode** is optional. In case it is not specified, its value is set to
**Heel Nederland**.

The **images** field is optional and can contains multiple
:ref:`ad_image_objects` which contain either the URL of the image
or a unique identifier provided by :ref:`post_image`. The number of max images
is depends on the category configuration (usually 8)

The **attributes** field is optional and can contain a list of
:ref:`user_defined_attributes`.

The **originalPrice** field is optional, and will only be usable by enabled sellers.
If a seller is not enabled, but will use this field, an error will be thrown.

.. _post_ad_example:

Parameters
----------

====================    ========    ========    ================================================================================
Name                    Type        Default     Description
====================    ========    ========    ================================================================================
_body                   boolean     true        Include the created ad in the response body on success. Disabling this will speed up the call.
_include                string      ""          Comma-separated-list of fields to include.
_exclude                string      ""          Comma-separated-list of fields to omit.
_validate               boolean     false       Validate the request without executing it.
====================    ========    ========    ================================================================================

.. _post_ad_errors:

Errors
------

.. include:: post-ad-errors.rst

Example
-------

.. include:: ../examples/post-ad-v2-example.rst


.. _post_ad_v1:

POST /ad v1
-----------

.. list-table::
 :widths: 20 80

 * - Scope
   - ``api_rw`` or ``console_rw``

 * - Accept
   - ``application/sellside.ad-v1+json, application/json``

 * - Content-Type
   - ``application/sellside.ad-v1+json; charset=utf-8``


Version 1 works just like :ref:`post_ad_v2` except that it is only compatible with
:ref:`categories_v1`.

.. warning::

	This call is deprecated and will be removed after September 2015.  It is
	only compatible with :ref:`categories_v1` and must only be used with the
	other :ref:`categories_v1_compatible_endpoints`. Otherwise, the attributes
	may not be recognized or editable.

Example
-------

.. include:: ../examples/post-ad-v1-example.rst

